// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches enzyme snapshots matches snapshot - attached right 1`] = `
<StyledButton
  attached="right"
  bgColor="var(--bg-light)"
  className="Button fill"
  color="var(--text-light)"
  hoverBgColor="var(--bg-hover)"
  hoverColor="var(--text-hover)"
  onClick={[Function]}
  size="medium"
>
  <StyledText
    accent={true}
  >
    test
  </StyledText>
</StyledButton>
`;

exports[`matches enzyme snapshots matches snapshot - disbled 1`] = `
<StyledButton
  bgColor="var(--bg-light)"
  className="Button fill"
  color="var(--text-light)"
  disabled={true}
  hoverBgColor="var(--bg-hover)"
  hoverColor="var(--text-hover)"
  onClick={null}
  size="medium"
>
  <StyledText
    accent={true}
  >
    test
  </StyledText>
</StyledButton>
`;

exports[`matches enzyme snapshots matches snapshot - isLoading 1`] = `
<StyledButton
  bgColor="var(--bg-light)"
  className="Button flex-row fill"
  color="var(--text-light)"
  hoverBgColor="var(--bg-hover)"
  hoverColor="var(--text-hover)"
  onClick={[Function]}
  size="medium"
>
  <Memo()
    name="loader"
  />
  <StyledText
    accent={true}
  >
    test
  </StyledText>
</StyledButton>
`;

exports[`matches enzyme snapshots matches snapshot - mixed 1`] = `
<StyledButton
  attached="left"
  bgColor="var(--bg-light)"
  className="Button fill"
  color="var(--text-light)"
  hoverBgColor="var(--bg-hover)"
  hoverColor="var(--text-hover)"
  onClick={[Function]}
  pushable={true}
  size="small"
>
  <StyledText
    accent={true}
  >
    test
  </StyledText>
</StyledButton>
`;

exports[`matches enzyme snapshots matches snapshot - text button 1`] = `
<StyledButton
  bgColor="transparent"
  className="Button text"
  color="var(--text-light)"
  hoverBgColor="var(--bg-hover)"
  hoverColor="var(--text-hover)"
  onClick={[Function]}
  size="medium"
>
  <StyledText
    accent={true}
  >
    test
  </StyledText>
</StyledButton>
`;

exports[`matches enzyme snapshots matches snapshot - typed 1`] = `
<StyledButton
  bgColor="var(--bg-lightest)"
  className="Button fill"
  color="var(--text-light)"
  hoverBgColor="var(--bg-hover)"
  hoverColor="var(--text-hover)"
  onClick={[Function]}
  size="medium"
>
  <StyledText
    accent={true}
  >
    test
  </StyledText>
</StyledButton>
`;

exports[`matches enzyme snapshots matches snapshot 1`] = `
<StyledButton
  bgColor="var(--bg-light)"
  className="Button fill"
  color="var(--text-light)"
  hoverBgColor="var(--bg-hover)"
  hoverColor="var(--text-hover)"
  onClick={[Function]}
  size="medium"
>
  <StyledText
    accent={true}
  >
    test
  </StyledText>
</StyledButton>
`;

exports[`matches test renderer snapshot serializes the styles 1`] = `
<span
  className="StyledButton-aqwbwz-0 dVMIdD Button fill"
  color="var(--text-light)"
  onClick={[Function]}
  size="medium"
>
  <span
    accent={true}
    className="StyledText__StyledTextSpan-sc-1ldibmc-0 gAWWUQ Text"
    noUserSelect={false}
  >
    test
  </span>
</span>
`;
